--- a/DAROOM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/DAROOM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,8 +83,8 @@ ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@WOLFGANG
 LastExecutedLaunchName=WOLFGANG
 LastExecutedPIEPreviewDevice=
@@ -136,7 +136,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/DAROOM
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -367,9 +367,174 @@ StaticMeshActor.Activation=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Lighting=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Physics=True
+LightmassImportanceVolume.VirtualTexture=True
+LightmassImportanceVolume.Tags=True
+LightmassImportanceVolume.Activation=True
+LightmassImportanceVolume.Cooking=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Lighting=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Physics=True
+PostProcessVolume.VirtualTexture=True
+PostProcessVolume.Tags=True
+PostProcessVolume.Activation=True
+PostProcessVolume.Cooking=True
+PostProcessVolume.Replication=True
+PostProcessVolume.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Physics=True
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=True
+TextRenderActor.VirtualTexture=True
+TextRenderActor.Tags=True
+TextRenderActor.Activation=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+DocumentationActor.TransformCommon=True
+DocumentationActor.Lighting=True
+DocumentationActor.Help Data=True
+DocumentationActor.Physics=True
+DocumentationActor.VirtualTexture=True
+DocumentationActor.Tags=True
+DocumentationActor.Activation=True
+DocumentationActor.Cooking=True
+DocumentationActor.Replication=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Actor=True
+Brush.TransformCommon=True
+Brush.Lighting=True
+Brush.BrushSettings=True
+Brush.Physics=True
+Brush.VirtualTexture=True
+Brush.Tags=True
+Brush.Activation=True
+Brush.Cooking=True
+Brush.Replication=True
+Brush.Actor=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+GeomModifier_Extrude.Settings=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=True
+PaintModeSettings.VertexPainting=True
+PaintModeSettings.Visualization=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.LightShafts=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Activation=True
+PointLight.Cooking=True
+PointLight.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Light Profiles=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Activation=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+Actor.Rendering=True
+Actor.Collision=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2320.000 Y=225.000
@@ -1131,5 +1296,62 @@ UdpMessagingSettings.Transport=True
 [DetailPropertyExpansion]
 UdpMessagingSettings="\"Object.Transport.StaticEndpoints\" \"Object.Tunnel.RemoteTunnelEndpoints\" "
 Object=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+GeomModifier_Extrude="\"Object.Settings\" "
+GeomModifier_Edit="\"Object.Settings\" "
+GeomModifier="\"Object.Settings\" "
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
+
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPersonBP/Maps/DAROOM
+
+[MessageLog]
+LastLogListing=MapCheck
+
+[SuppressableDialogs]
+ExtrudeCoordsWarning=False
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 
 
