--- a/DAROOM/Saved/Config/Windows/Engine.ini
+++ b/DAROOM/Saved/Config/Windows/Engine.ini
@@ -40,4 +40,12 @@ DefaultSaveSessionAs=DAROOM
 ClientSettings=(DisplayName="Wolfgang",AvatarColor=(R=0.009880,G=1.000000,B=0.000000,A=1.000000),DesktopAvatarActorClass=/ConcertSyncClient/DesktopPresence.DesktopPresence_C,VRAvatarActorClass=/ConcertSyncClient/VRPresence.VRPresence_C,DiscoveryTimeoutSeconds=5,SessionTickFrequencySeconds=1,LatencyCompensationMs=0.000000,Tags=)
 EndpointSettings=(bEnableLogging=True,PurgeProcessedMessageDelaySeconds=30,RemoteEndpointTimeoutSeconds=60)
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
