estado 0 en todos

--- a/DAROOM/Saved/Config/Windows/Engine.ini
+++ b/DAROOM/Saved/Config/Windows/Engine.ini
@@ -31,7 +31,7 @@ MLSDKPath=(Path="")
 [/Script/Concert.ConcertClientConfig]
 bIsHeadless=False
 bInstallEditorToolbarButton=True
-bAutoConnect=True
+bAutoConnect=False
 bRetryAutoConnectOnError=True
 DefaultServerURL=DESKTOP-UOASKH2
 DefaultSessionName=DAROOM
