--- a/DAROOM/Saved/Config/Windows/SourceControlSettings.ini
+++ b/DAROOM/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,4 +1,7 @@
 [SourceControl.SourceControlSettings]
-Provider=None
+Provider=Git
+
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=D:/softwares/Git/bin/git.exe
 
 
