--- a/DAROOM/Config/DefaultEngine.ini
+++ b/DAROOM/Config/DefaultEngine.ini
@@ -33,3 +33,10 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=VisualStudio2017
+
+[/Script/UnrealEd.CookerSettings]
+bEnableCookOnTheSide=False
+
