--- a/DAROOM/Config/DefaultGame.ini
+++ b/DAROOM/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=96ABF07B490F33E34374B7BF980DB166
-ProjectName=Third Person BP Game Template
+ProjectName=DAROOM
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=Always
+BuildConfiguration=PPBC_Shipping
+
