--- a/DAROOM/Config/DefaultEngine.ini
+++ b/DAROOM/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=CandyLand
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/DAROOM.DAROOM
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Lobbie.Lobbie
+GameDefaultMap=/Game/ThirdPersonBP/Maps/Lobbie.Lobbie
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -39,4 +39,3 @@ Compiler=VisualStudio2017
 
 [/Script/UnrealEd.CookerSettings]
 bEnableCookOnTheSide=False
-
