--- a/DAROOM/Config/DefaultEngine.ini
+++ b/DAROOM/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/Shooter.Shooter_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPersonBP/Blueprints/YoyGameInstance.YoyGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
