--- a/DAROOM/Saved/Config/Windows/Engine.ini
+++ b/DAROOM/Saved/Config/Windows/Engine.ini
@@ -43,4 +43,12 @@ EndpointSettings=(bEnableLogging=True,PurgeProcessedMessageDelaySeconds=30,Remot
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
