--- a/DAROOM/Config/DefaultGame.ini
+++ b/DAROOM/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=96ABF07B490F33E34374B7BF980DB166
 ProjectName=DAROOM
+CompanyName=3DNUTSBROS
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "5C78063845E958065F8C01855145C15E", "DAROOM")
 
 [StartupActions]
 bAddPacks=True
@@ -9,4 +11,10 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=Always
 BuildConfiguration=PPBC_Shipping
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
++StartupMovies=3dnutslogo
+
 
